--- a/_posts/2020-12-08-dua-wajah.md
+++ b/_posts/2020-12-08-dua-wajah.md
@@ -4,16 +4,9 @@ title: "Dua Wajah"
 slug: 'dua-wajah'
 date: 2020-12-06 18:21:26
 description: 'Two side of art'
-image: 'https://i.postimg.cc/6TxwqgsL/IMG-20201114-150708.jpg'
-categories: kubisme
+image: '/assets/images/wuwa.webp'
+categories: ww
 artist: 'Gallery teplok.id'
 instagram: 'dian_djoyo'
 ---
 Two Side of Art
-
-<hr>
-
-Pelukis:
-
-facebook : [Dian Indah Hapsari](https://www.facebook.com/dinda.djoyosudarmo){:target="_blank"}  
-instagram : [@dinda_djoyosudarmo](https://www.instagram.com/dinda_djoyosudarmo/){:target="_blank"}
