--- a/_posts/2020-12-08-dua-wajah.md
+++ b/_posts/2020-12-08-dua-wajah.md
@@ -1,12 +1,11 @@
 ---
 id_post: 1
-title: "Dua Wajah"
-slug: 'dua-wajah'
+title: "Ngedate Berdua"
+slug: 'ngedate-berdua'
 date: 2020-12-06 18:21:26
-description: 'Two side of art'
+description: 'Ngedate'
 image: '/assets/images/wuwa.webp'
 categories: ww
-artist: 'Gallery teplok.id'
-instagram: 'dian_djoyo'
+owner: 'Alayosa'
 ---
 Two Side of Art
