--- a/_posts/2020-12-08-dua-wajah.md
+++ b/_posts/2020-12-08-dua-wajah.md
@@ -4,7 +4,7 @@ title: "Dua Wajah"
 slug: 'dua-wajah'
 date: 2020-12-06 18:21:26
 description: 'Two side of art'
-image: 'https://i.postimg.cc/6TxwqgsL/IMG-20201114-150708.jpg'
+image: '/assets/images/wuwa.webp'
 categories: kubisme
 owner: 'Gallery teplok.id'
 ---
