--- a/_posts/2025-17-01-ngedate.md
+++ b/_posts/2025-17-01-ngedate.md
@@ -1,7 +1,7 @@
 ---
-id_post: 4
-title: "Garden of Haures"
-slug: 'garden-of-haures'
+id_post: 1
+title: "Ngedate Berdua"
+slug: 'ngedate-berdua'
 date: 2020-01-17 18:21:26
 description: 'Put your description here.'
 image: '/assets/images/wuwa.webp'
@@ -9,4 +9,4 @@ categories: ww
 owner: 'Alayosa'
 ---
 
-Ngedate Berdua.
+Semoga ga ketauan FBI.
