--- a/_posts/2025-17-01-ngedate.md
+++ b/_posts/2025-17-01-ngedate.md
@@ -3,7 +3,7 @@ id_post: 1
 title: "Ngedate Berdua"
 slug: 'ngedate-berdua'
 date: 2020-01-17 18:21:26
-description: 'Put your description here.'
+description: 'Semoga ga ketauan FBI.'
 image: '/assets/images/wuwa.webp'
 categories: ww
 owner: 'Alayosa'
